Issue #28139: Fix messed up indentation

Also update the classmethod and staticmethod doc strings and comments to
match the RST documentation.